[gd_scene load_steps=6 format=2]

[ext_resource path="res://art/ui/item_get.png" type="Texture" id=1]
[ext_resource path="res://fonts/item_get_header.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/item_get_subheader.tres" type="DynamicFont" id=3]
[ext_resource path="res://ItemGet.gd" type="Script" id=4]
[ext_resource path="res://fonts/item_get_prompt.tres" type="DynamicFont" id=5]

[node name="ItemGet" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 207.0
margin_top = 20.0
margin_right = 817.0
margin_bottom = 582.0
rect_min_size = Vector2( 500, 0 )
custom_constants/separation = 30

[node name="ImgContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 610.0
margin_bottom = 289.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="TextureRect" parent="CenterContainer/VBoxContainer/ImgContainer"]
modulate = Color( 1, 1, 1, 0.313726 )
margin_left = 166.0
margin_right = 444.0
margin_bottom = 289.0
texture = ExtResource( 1 )

[node name="Bg2" type="TextureRect" parent="CenterContainer/VBoxContainer/ImgContainer"]
modulate = Color( 1, 1, 1, 0.509804 )
margin_left = 166.0
margin_right = 444.0
margin_bottom = 289.0
texture = ExtResource( 1 )

[node name="HallPass" type="TextureRect" parent="CenterContainer/VBoxContainer/ImgContainer"]
margin_left = 305.0
margin_top = 144.0
margin_right = 305.0
margin_bottom = 144.0

[node name="TimmyFiles" type="TextureRect" parent="CenterContainer/VBoxContainer/ImgContainer"]
margin_left = 305.0
margin_top = 144.0
margin_right = 305.0
margin_bottom = 144.0

[node name="Enlightenment" type="TextureRect" parent="CenterContainer/VBoxContainer/ImgContainer"]
margin_left = 305.0
margin_top = 144.0
margin_right = 305.0
margin_bottom = 144.0

[node name="Header" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 319.0
margin_right = 610.0
margin_bottom = 392.0
custom_fonts/font = ExtResource( 2 )
text = "HALL PASS"
align = 1

[node name="Subheader" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 422.0
margin_right = 610.0
margin_bottom = 459.0
custom_fonts/font = ExtResource( 3 )
text = "wow things are going poorly for you"
align = 1
autowrap = true

[node name="PromptContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 489.0
margin_right = 610.0
margin_bottom = 562.0

[node name="PressPrompt2" type="Label" parent="CenterContainer/VBoxContainer/PromptContainer"]
margin_right = 610.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 2 )
text = "Press X to GET ANGRY"
align = 1

[node name="PressPrompt" type="Label" parent="CenterContainer/VBoxContainer/PromptContainer"]
visible = false
margin_left = 192.0
margin_top = 22.0
margin_right = 417.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 5 )
text = "Press Z to continue"
align = 1
